# mewni

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pypi-deploy.yml
a/: README.md  pyproject.toml
a/bot/config/: env.py
a/bot/stores/: User.py
a/bot/templates/: example.xml  message.xml
danil/: main.py
danil/bot/config/: app.py
danil/bot/controllers/: start.py
danil/bot/keyboards/: example.xml
danil/bot/stores/: User.py
mewni/: __init__.py  cli.py
mewni/cli/: __init__.py  cli.py  generate.py  init.py  migrate.py
mewni/core/: __init__.py  app.py  autoloader.py  bot.py  config.py  controller.py  controllers.py  loader.py  middleware.py  muni_object.py  register.py  store.py
mewni/templates/: model.txt
mewni/templates/project/: main.py
mewni/templates/project/bot/config/: __init__.py  env.py
mewni/templates/project/bot/controllers/: start.py
mewni/tests/: check_tree_identic.py  workspace.py
mewni/types/: config.py
mewni/utils/: fmt.py  get_class_fields.py  make_async.py
muni/: __init__.py  arch.py  cli.py  console.py
muni/cli/: ni.py
muni/core/: __init__.py  app.py  ask_chat_notificator.py  ask_data_middleware.py  autoloader.py  config.py  constants.py  controller.py  controllers.py  ctx.py  db.py  filter_.py  functions.py  loader.py  model.py  muni_object.py  register.py  scheduling.py  schedulling.py  store.py  types.py  typs.py
muni/core/templates/: __init__.py
muni/core/utils/: get_class_fields.py  is_async.py  isasync.py  lambda_value.py  muni_meta.py  singleton.py
muni/template/: main.py
muni/templates/: command.py  controller.py  controller.txt  model.py  model.txt  state.py  storage.py
muni/templates/project/: .env.dist  main.py
muni/templates/project/bot/config/: app.py  env.py
muni/templates/project/bot/controllers/: __init__.py  start.py
muni/templates/project/bot/controllers/d/: dipped.py
muni/templates/project/bot/keyboards/: example.xml
muni/templates/project/bot/locales/: ru.json
muni/templates/project/bot/states/: UserState.py
muni/templates/project/bot/stores/: User.py
muni/utils/: prefix.py  singleton.py
tst/: README.md  main.py
tst/bot/config/: env.py
tst/bot/controllers/: start.py
tst/bot/models/: Yar.py
tst/bot/stores/: User.py
