[tool.poetry]
name = "muni"
version = "0.1.0"
description = ""
authors = ["Danil Sokolov<danilzyx@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^3.4"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
