[tool.poetry]
name = "muni"
version = "0.1.6"
description = "Telegram bot framework"
authors = ["Danil Sokolov <danilzyx@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
click = "^8.1.3"
aiogram = ">= 2.2.0"
aioredis = ">= 2.0.1"
environs = ">= 9.5.0"
peewee = ">= 3.14.10"
Werkzeug = "^2.1.2"
aioschedule = "^0.5.2"
cogapp = "^3.3.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^3.4"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
