[tool.poetry]
name = "mewni"
version = "0.2"
description = "Telegram bot framework"
authors = ["Danil Sokolov <danilzyx@gmail.com>"]
readme = 'README.md'
license = ""
repository = 'https://github.com/sejjax/mewni'
keywords = ["telegram", "bot", "framework", "aiogram", "mtproto"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet"
]
include = ["mewni/templates/project/.env"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sejjax/mewni/issues"

[tool.poetry.dependencies]
python = ">=3.10"
click = "^8.1.3"
aiogram = ">= 2.2.0"
aioredis = ">= 2.0.1"
environs = ">= 9.5.0"
peewee = ">= 3.14.10"
Werkzeug = "^2.1.2"
aioschedule = "^0.5.2"
cogapp = "^3.3.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
ni = 'mewni.cli:main'
mewni ='mewni.cli:main'

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
